@@ -1,3 +1,8 @@
+2011-01-28  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/42894
+	* gcc.dg/tls/pr42894.c: New test.
+
 2011-01-28  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* gcc.dg/pr47276.c: Add dg-require-visibility.
